tests/compile_fail/array_align_compat.stderr
error[E0277]: the trait bound `f32: ShaderLayoutCompatArrayElement` is not satisfied
 --> tests/compile_fail/array_align_compat.rs:5:13
  |
5 |         a1: [f32; 1],
  |             ^^^^^^^^ the trait `ShaderLayoutCompatArrayElement` is not implemented for `f32`
  |
  = help: the following other types implement trait `ShaderLayoutCompatArrayElement`:
            glam::f32::sse2::mat2::Mat2
            glam::f32::sse2::mat3a::Mat3A
            glam::f32::sse2::mat4::Mat4
            glam::f32::sse2::quat::Quat
            glam::f32::sse2::vec3a::Vec3A
            glam::f32::sse2::vec4::Vec4
            glam::i32::ivec4::IVec4
            glam::u32::uvec4::UVec4
  = note: required for `[f32; 1]` to implement `ShaderLayoutCompat`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
